# Cpp23-Module-Example

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake_import_std_uuids.json  main.cpp
src/: main.cpp
